Tried to fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,7 @@ body {
 
 .resourcestext {
   color: black;
+  line-height: 1em;
 }
 
 .backup {
